--- a/style.css
+++ b/style.css
@@ -20,79 +20,12 @@
 body {
     background-color: var(--cor-de-fundo);
     font-family: var(--fonte);
+    /* overflow-x: hidden; */
     width: 100vw;
-    overflow-x: hidden;
-}
-
-.container__hero {
-    width: 100vw;
-    height: 800px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    gap: 40px;
-    padding: 0 14rem;
-    background-image: url("assets/backgroundHero.png");
-    background-size: contain;
-    background-position: left;
-    background-repeat: no-repeat;
-
-}
-
-.container__hero h1 {
-    color: var(--branco-principal);
-    font-size: 48px;
-}
-
-.hero__left {
-    height: 100%;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: left;
-    justify-content: center;
-    gap: 15px;
-}
-
-.hero__left-container {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    gap: 5px;
-}
-
-.hero__left img {
-    width: 18px;
-}
-
-.hero__left h3 {
-    color: var(--branco-secundario);
-    font-size: 16px;
-}
-
-.hero__left p {
-    color: var(--branco-terciario);
-    font-size: 14px;
-    max-width: 570px;
-    margin-top: 2px;
-}
-
-.hero__right {
-    position: relative;
-}
-
-.hero__right .first__image {
-    width: 700px;
-}
-
-.second__image {
-    position: absolute;
-    width: 170px;
-    bottom: -40px;
-    right: -50px;
 }
 
 .container__button-after-hero {
+    margin-top: 50px;
     display: flex;
     justify-content: center;
 }
@@ -824,14 +757,11 @@ body {
     padding: 0 3.5rem;
 }
 
-
 .payments__flags {
     display: flex;
     gap: 20px;
     align-items: center;
 }
-
-
 
 footer {
     margin-top: 25px;
@@ -841,4 +771,14 @@ footer {
     align-items: start;
     justify-content: center;
     height: 45px;
+}
+
+.red-effect {
+    height: 0px;
+    width: 0px;
+    background-color: var(--vermelho);
+    float: right;
+    opacity: 0.25;
+    border-radius: 50%;
+    box-shadow: -100px 0px 250px 250px var(--vermelho);
 }
