--- a/style.css
+++ b/style.css
@@ -20,12 +20,11 @@
 body {
     background-color: var(--cor-de-fundo);
     font-family: var(--fonte);
-    /* overflow-x: hidden; */
+    overflow-x: hidden;
     width: 100vw;
 }
 
 .container__button-after-hero {
-    margin-top: 50px;
     display: flex;
     justify-content: center;
 }
@@ -47,131 +46,6 @@ body {
     cursor: pointer;
 }
 
-.container__get-started h1 {
-    color: var(--vermelho);
-    text-align: center;
-    font-weight: 600;
-    font-size: 24px;
-}
-
-.container__get-started h2 {
-    color: var(--branco-secundario);
-    text-align: center;
-    font-weight: 500;
-    font-size: 32px;
-}
-
-.container__get-started {
-    margin-top: 150px;
-    display: flex;
-    flex-direction: column;
-    gap: 5px;
-    justify-content: center;
-    width: 100%;
-}
-
-.started__content {
-    display: flex;
-    justify-content: center;
-    gap: 4rem;
-    margin-top: 45px;
-}
-
-.right__content {
-    display: flex;
-    align-items: center;
-    gap: 20px;
-}
-
-.right__content p {
-    font-weight: 600;
-}
-
-.right__content span {
-    background-color: var(--vermelho);
-    font-weight: 600;
-    width: 80px;
-    height: 20px;
-    padding: 5px 10px;
-}
-
-.right__content img {
-    width: 64px;
-}
-
-.started__right {
-    color: var(--branco-principal);
-    display: flex;
-    flex-direction: column;
-}
-
-.started__image-left {
-    max-width: 45%;
-    object-fit: cover;
-    border-radius: 8px;
-}
-
-.line__started {
-    width: 1px;
-    height: 45px;
-    background-color: var(--vermelho);
-    margin: 15px 7%;
-}
-
-.line__gray {
-    width: 75%;
-    height: 1px;
-    background-color: #bababa34;
-    margin: 115px auto 50px auto;
-}
-
-.container__resources h1 {
-    color: var(--vermelho);
-    text-align: center;
-    font-weight: 600;
-    font-size: 18px;
-}
-
-.container__resources h2 {
-    color: var(--branco-secundario);
-    text-align: center;
-    font-weight: 500;
-    font-size: 20px;
-}
-
-.resources__lista {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    gap: 150px;
-    margin-top: 100px;
-    margin-bottom: 100px;
-}
-
-.resources__lista li {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 10px;
-}
-
-.resources__lista img {
-    width: 130px;
-}
-
-.resources__lista h2 {
-    color: var(--branco-principal);
-    font-size: 22px;
-    font-weight: 600;
-}
-
-.resources__lista p {
-    color: var(--branco-secundario);
-    font-size: 12px;
-    max-width: 250px;
-    text-align: center;
-}
 
 .container__ai h1 {
     color: var(--vermelho);
@@ -260,6 +134,7 @@ body {
 
 .container__no-lag {
     margin-top: 150px;
+    border: 20px solid;
 }
 
 .container__no-lag h1 {
@@ -778,7 +653,8 @@ footer {
     width: 0px;
     background-color: var(--vermelho);
     float: right;
-    opacity: 0.25;
-    border-radius: 50%;
-    box-shadow: -100px 0px 250px 250px var(--vermelho);
-}
+    opacity: 0.22;
+    border-radius: 5%;
+    box-shadow: -120px 0px 250px 280px var(--vermelho);
+    z-index: 0;
+} 
