--- a/style.css
+++ b/style.css
@@ -29,6 +29,12 @@ body {
     justify-content: center;
 }
 
+@media (max-width: 1501px) {
+    .container__button-after-hero {
+        margin-top: 60px;
+    }
+}
+
 .btn-main {
     background-color: var(--vermelho);
     color: var(--branco-principal);
@@ -75,7 +81,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 30px;
+    gap: 42px;
     margin-top: 50px;
 }
 
@@ -135,6 +141,8 @@ body {
 .container__no-lag {
     margin-top: 150px;
     border: 20px solid;
+    position: relative;
+    z-index: 1;
 }
 
 .container__no-lag h1 {
@@ -551,110 +559,12 @@ body {
     border-radius: 2px;
 }
 
-.container__features {
-    margin-top: 150px;
-    text-align: center;
-}
-
-.container__features h2 {
-    font-size: 32px;
-    font-weight: 400;
-    margin-top: 5px;
-}
-
-.container__videos {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    width: 60%;
-    margin: 50px auto;
-    gap: 40px;
-}
-
-.video {
-    height: 315px;
-    width: 560px;
-    margin: 25px auto;
-}
-
-.red__info {
-    margin-top: -5px;
-    height: 40px;
-    background-color: var(--vermelho);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: var(--branco-principal);
-    width: 100%;
-}
-
-.red__info span {
-    font-size: 14px;
-    font-weight: 700;
-}
-
-.container__policy {
-    margin-top: 150px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 80px;
-    text-align: center;
-}
-
-.container__policy img {
-    width: 300px;
-}
-
-.container__policy .right {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    column-gap: 5px;
-    align-items: center;
-    max-width: 400px;
-}
-
-.container__policy .right h1 {
-    font-size: 24px;
-}
-
-.container__policy .right p {
-    font-size: 14px;
-    font-weight: 400;
-    color: var(--branco-terciario);
-    margin-top: 15px;
-}
-
-.container__payments {
-    display: flex;
-    justify-content: space-between;
-    margin-top: 115px;
-    padding: 0 3.5rem;
-}
-
-.payments__flags {
-    display: flex;
-    gap: 20px;
-    align-items: center;
-}
-
-footer {
-    margin-top: 25px;
-    color: var(--branco-terciario);
-    text-align: center;
-    display: flex;
-    align-items: start;
-    justify-content: center;
-    height: 45px;
-}
-
 .red-effect {
-    height: 0px;
-    width: 0px;
     background-color: var(--vermelho);
     float: right;
     opacity: 0.22;
     border-radius: 5%;
     box-shadow: -120px 0px 250px 280px var(--vermelho);
+    position: relative;
     z-index: 0;
-} 
+}
