--- a/style.css
+++ b/style.css
@@ -94,6 +94,7 @@ body {
     border: 1px solid #383838;
     padding: 20px;
     display: flex;
+    padding: 20px;
     flex-direction: column;
     gap: 15px;
 }
@@ -105,7 +106,7 @@ body {
     width: 116.27px;
     height: 37px;
     font-size: 18px;
-    padding: 10px;
+    padding: 5px 10px 10px 10px;
     text-align: center;
     border-radius: 4px;
     font-weight: 600;
