--- a/style.css
+++ b/style.css
@@ -45,12 +45,17 @@ body {
     width: 400px;
     height: 50px;
     text-align: center;
-    border: blue;
 }
 
 .btn-main:hover {
     background-color: #991526;
     cursor: pointer;
+}
+
+@media (max-width: 515px) {
+    .grid {
+        grid-template-columns: 1fr;
+    }
 }
 
 
@@ -84,6 +89,7 @@ body {
     align-items: center;
     gap: 42px;
     margin-top: 50px;
+    flex-wrap: wrap;
 }
 
 .ai__card-primario,
@@ -140,260 +146,6 @@ body {
     font-size: 14px;
 }
 
-.container__no-lag {
-    margin-top: 150px;
-    border: 20px solid;
-    position: relative;
-    z-index: 1;
-}
-
-.container__no-lag h1 {
-    text-align: center;
-    color: var(--vermelho);
-    font-size: 28px;
-}
-
-.container__no-lag h2 {
-    text-align: center;
-    color: var(--branco-secundario);
-    letter-spacing: 1px;
-    font-size: 32px;
-    font-weight: 400;
-}
-
-.no-lag__content {
-    display: flex;
-    justify-content: center;
-    gap: 5rem;
-    margin-top: 45px;
-}
-
-.line__no-lag {
-    width: 1px;
-    height: 45px;
-    background-color: var(--vermelho);
-    margin: 15px 7%;
-}
-
-.container__server {
-    margin-top: 200px;
-}
-
-.c__server-titulo {
-    color: var(--vermelho);
-    text-align: center;
-    font-weight: 600;
-    font-size: 24px;
-}
-
-.c__server-subtitulo {
-    color: var(--branco-secundario);
-    text-align: center;
-    font-weight: 500;
-    font-size: 32px;
-    margin-bottom: 50px;
-}
-
-.server__tabela {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-.tabela__sao-paulo,
-.server-one,
-.server-two,
-.server-three,
-.server-four,
-.server-five,
-.server-six {
-    width: 55%;
-    height: 74px;
-    background-color: #383838;
-    margin: auto;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 20px;
-    border: 1px solid #383838;
-}
-
-.tabela__sao-paulo {
-    border-radius: 2px 2px 0px 0px;
-}
-
-.server-six {
-    border-radius: 0px 0px 2px 2px;
-}
-
-.sao-paulo__container {
-    display: flex;
-    align-items: center;
-    gap: 5px;
-}
-
-.sao-paulo__container h1 {
-    color: var(--branco-principal);
-    font-size: 20px;
-}
-
-.sao-paulo__container img {
-    width: 25px;
-}
-
-.red-ball__container h3 {
-    color: var(--branco-principal);
-    font-size: 12px;
-}
-
-.red-ball {
-    width: 12px;
-    height: 12px;
-    background-color: var(--vermelho);
-    border-radius: 10px;
-}
-
-.red-ball__container {
-    display: flex;
-    align-items: center;
-    gap: 5px;
-}
-
-.server-one,
-.server-three,
-.server-five {
-    background-color: #222222;
-}
-
-.server-one__container,
-.server-two__container,
-.server-three__container,
-.server-four__container,
-.server-five__container,
-.server-six__container {
-    display: flex;
-    align-items: center;
-    color: var(--branco-principal);
-    gap: 5px;
-}
-
-.server-one img,
-.server-two__container img,
-.server-three__container img,
-.server-four__container img,
-.server-five__container img,
-.server-six__container img {
-    width: 20px;
-}
-
-.server-one h1,
-.server-two__container h1,
-.server-three__container h1,
-.server-four__container h1,
-.server-five__container h1,
-.server-six__container h1 {
-    font-size: 20px;
-}
-
-.server-one h3,
-.server-two__container h3,
-.server-three__container h3,
-.server-four__container h3,
-.server-five__container h3,
-.server-six__container h3 {
-    font-size: 12px;
-    margin-bottom: 5px;
-}
-
-.server-one h2,
-.server-two h2,
-.server-three h2,
-.server-four h2,
-.server-five h2,
-.server-six h2 {
-    font-size: 13px;
-    color: var(--branco-principal);
-    background-color: #2E8B57;
-    width: 52px;
-    height: 20px;
-    text-align: center;
-    padding: 3px;
-    border-radius: 5px;
-}
-
-.container__more-info {
-    margin-top: 150px;
-}
-
-.container__more-info h1,
-.container__more-info h2 {
-    text-align: center;
-}
-
-.container__more-info h1 {
-    font-size: 18px;
-}
-
-.container__more-info h2 {
-    font-size: 18px;
-    font-weight: 400;
-    margin-top: 2px;
-}
-
-.more-info__content {
-    width: 80%;
-    display: flex;
-    justify-content: center;
-    margin: 50px auto;
-    gap: 50px;
-}
-
-.more-info__container__image {
-    width: 50%;
-}
-
-.more-info__container__image img {
-    width: 100%;
-}
-
-.more-info__container__main {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    height: 150px;
-    gap: 20px;
-}
-
-.more-info__container__main .main__content {
-    max-width: 200px;
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    height: 180px;
-}
-
-.container__games h1 {
-    color: var(--vermelho);
-    text-align: center;
-    font-weight: 600;
-    font-size: 18px;
-    margin-top: 50px;
-}
-
-.container__games h2 {
-    color: var(--branco-secundario);
-    text-align: center;
-    font-weight: 500;
-    font-size: 20px;
-    margin-bottom: 50px;
-}
-
-.container__images__games {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
 .container__plans h1 {
     color: var(--vermelho);
     text-align: center;
@@ -419,7 +171,7 @@ body {
 .plans__container-card {
     margin-top: 50px;
     background-color: #15201a;
-    width: 400px;
+    width: 375px;
     height: 624px;
     border-radius: 4px;
     border: 1px solid var(--verde);
@@ -483,7 +235,7 @@ body {
     font-weight: 800;
     padding: 15px;
     border-radius: 2px;
-    width: 400px;
+    width: 375px;
     height: 50px;
     text-align: center;
 }
