--- a/style.css
+++ b/style.css
@@ -20,8 +20,8 @@
 body {
     background-color: var(--cor-de-fundo);
     font-family: var(--fonte);
-    overflow-x: hidden;
     width: 100vw;
+    overflow-x: hidden;
 }
 
 .container__button-after-hero {
@@ -51,13 +51,6 @@ body {
     background-color: #991526;
     cursor: pointer;
 }
-
-@media (max-width: 515px) {
-    .grid {
-        grid-template-columns: 1fr;
-    }
-}
-
 
 .container__ai h1 {
     color: var(--vermelho);
@@ -253,6 +246,7 @@ body {
     opacity: 0.22;
     border-radius: 5%;
     box-shadow: -120px 0px 250px 280px var(--vermelho);
-    position: relative;
+    position: absolute;
     z-index: 0;
+    right: 0;
 }
