--- a/style.css
+++ b/style.css
@@ -67,6 +67,12 @@ body {
     margin-bottom: 50px;
 }
 
+.container__ai {
+    background-image:
+        radial-gradient(circle at 90% 90%, rgba(255, 0, 0, 0.308), rgba(0, 0, 0, 0) 30%),
+        linear-gradient(180deg, #000, #000);
+}
+
 .container__ai-image {
     display: flex;
     justify-content: center;
@@ -81,8 +87,9 @@ body {
     justify-content: center;
     align-items: center;
     gap: 42px;
-    margin-top: 50px;
+    margin: 50px 0;
     flex-wrap: wrap;
+    height: 700px;
 }
 
 .ai__card-primario,
