--- a/style.css
+++ b/style.css
@@ -78,10 +78,6 @@ body {
     justify-content: center;
 }
 
-.container__ai img {
-    width: 800px;
-}
-
 .ai__cards {
     display: flex;
     justify-content: center;
@@ -90,20 +86,6 @@ body {
     margin: 50px 0;
     flex-wrap: wrap;
     height: 700px;
-}
-
-.ai__card-primario,
-.ai__card-secundario {
-    background-color: var(--cinza);
-    width: 400px;
-    height: 500px;
-    border-radius: 4px;
-    border: 1px solid #383838;
-    padding: 20px;
-    display: flex;
-    padding: 20px;
-    flex-direction: column;
-    gap: 15px;
 }
 
 .ai__card-primario h1,
@@ -256,3 +238,13 @@ body {
         justify-content: left;
     }
 }
+
+/* @media (max-width: 1280px) {
+    #experimente {
+        flex-direction: column;
+    }
+
+    #experimente img {
+        width: 100%;
+    }
+} */
