--- a/style.css
+++ b/style.css
@@ -52,81 +52,6 @@ body {
     cursor: pointer;
 }
 
-.container__ai h1 {
-    color: var(--vermelho);
-    text-align: center;
-    font-weight: 600;
-    font-size: 24px;
-}
-
-.container__ai h2 {
-    color: var(--branco-secundario);
-    text-align: center;
-    font-weight: 500;
-    font-size: 32px;
-    margin-bottom: 50px;
-}
-
-.container__ai {
-    background-image:
-        radial-gradient(circle at 90% 90%, rgba(255, 0, 0, 0.308), rgba(0, 0, 0, 0) 30%),
-        linear-gradient(180deg, #000, #000);
-}
-
-.container__ai-image {
-    display: flex;
-    justify-content: center;
-}
-
-.ai__cards {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 42px;
-    margin: 50px 0;
-    flex-wrap: wrap;
-    height: 700px;
-}
-
-.ai__card-primario h1,
-.ai__card-secundario h1 {
-    color: var(--branco-principal);
-    background-color: var(--vermelho);
-    width: 116.27px;
-    height: 37px;
-    font-size: 18px;
-    padding: 7px 10px 10px 10px;
-    text-align: center;
-    border-radius: 4px;
-    font-weight: 600;
-}
-
-.ai__card-secundario h1 {
-    width: 194.7px;
-    padding: 10px;
-}
-
-.ai__card-primario h3,
-.ai__card-secundario h3 {
-    color: var(--branco-principal);
-    font-size: 14px;
-    font-weight: 400;
-}
-
-.card__lista li {
-    display: flex;
-    gap: 5px;
-    margin-bottom: 10px;
-}
-
-.card__lista img {
-    width: 18px;
-}
-
-.card__lista p {
-    color: var(--branco-terciario);
-    font-size: 14px;
-}
 
 .container__plans h1 {
     color: var(--vermelho);
@@ -153,7 +78,7 @@ body {
 .plans__container-card {
     margin-top: 50px;
     background-color: #15201a;
-    width: 375px;
+    width: 360px;
     height: 624px;
     border-radius: 4px;
     border: 1px solid var(--verde);
@@ -210,18 +135,6 @@ body {
     margin-top: 100px;
 }
 
-.card-btn {
-    background-color: var(--vermelho);
-    color: var(--branco-principal);
-    border: none;
-    font-weight: 800;
-    padding: 15px;
-    border-radius: 2px;
-    width: 375px;
-    height: 50px;
-    text-align: center;
-}
-
 #checkYellow {
     background-color: var(--verde);
     width: 17px;
@@ -239,12 +152,14 @@ body {
     }
 }
 
-/* @media (max-width: 1280px) {
+@media (min-width: 1440px) {
     #experimente {
-        flex-direction: column;
+        flex-direction: row;
+        width: 70vw;
     }
 
-    #experimente img {
-        width: 100%;
+    #experimentContent {
+        width: 900px;
+        gap: 50px;
     }
-} */
+}
