--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body {
 
 @media (max-width: 1501px) {
     .container__button-after-hero {
-        margin-top: 60px;
+        margin-top: 100px;
     }
 }
 
@@ -154,19 +154,18 @@ body {
     background-color: #222222;
     padding: 20px;
     border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    color: var(--branco-principal);
     z-index: 1000;
 }
 
 .modal-content {
-    width: 300px;
+    width: 450px;
 }
 
 .modal-header {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin-bottom: 10px;
 }
 
 .modal-header img {
@@ -175,15 +174,82 @@ body {
 }
 
 .modal-header h2 {
-    margin: 0;
+    font-size: 22px;
+    font-weight: 700;
 }
 
 .modal-body p {
-    margin: 0;
+    font-size: 14px;
+    font-weight: 400;
+    color: var(--branco-terciario);
+}
+
+.container__prices-modal {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.container__modal-line {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: baseline;
+}
+
+.container__modal-line h3 {
+    font-size: 14px;
+    font-weight: 500;
+}
+
+.container__modal-line span {
+    font-size: 12px;
+    color: var(--branco-principal);
+    font-weight: 700;
+    background-color: #2E8B5750;
+    border: 1px solid var(--verde);
+    border-radius: 20px;
+    padding: 2px 10px;
+}
+
+.container__modal-line h2 {
+    font-size: 12px;
+    font-weight: 800;
+}
+
+.modal__container-detalhes {
+    width: 100%;
+    height: 70px;
+    background-color: #444444;
+    border-radius: 4px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 10px;
+}
+
+.modal-detalhes {
+    display: flex;
+    justify-content: space-between;
+}
+
+.detalhes-precos {
+    font-weight: 700;
+}
+
+.modal__botao {
+    background-color: var(--verde);
+    color: var(--branco-principal);
+    width: 100%;
+    height: 40px;
+    font-size: 14px;
+    font-weight: 700;
+    border-radius: 2px;
 }
 
 .modal-footer {
-    margin-top: 10px;
+    color: #E1C111;
+    font-size: 14px;
 }
 
 #closeButton {
@@ -192,4 +258,26 @@ body {
     cursor: pointer;
     font-size: 24px;
     color: #888;
+}
+
+#boxShadow1,
+#boxShadow2,
+#boxShadow3 {
+    box-shadow: rgba(189, 22, 44, 0.2) 0px 0px 200px 400px;
+}
+
+@media (max-width: 1025px) {
+    #imageHero {
+        width: 100%;
+    }
+
+    #containerImageHero {
+        width: 100%;
+    }
+
+    #boxShadow1,
+    #boxShadow2,
+    #boxShadow3 {
+        box-shadow: rgba(189, 22, 44, 0.2) 0px 0px 100px 200px;
+    }
 }
