--- a/style.css
+++ b/style.css
@@ -156,10 +156,14 @@ body {
     border-radius: 8px;
     color: var(--branco-principal);
     z-index: 1000;
+    border-top: 4px solid #393939;
 }
 
 .modal-content {
-    width: 450px;
+    width: 440px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
 }
 
 .modal-header {
@@ -228,13 +232,38 @@ body {
     padding: 10px;
 }
 
+.modal__container-detalhes h1 {
+    font-weight: 700;
+    font-size: 14px;
+}
+
 .modal-detalhes {
     display: flex;
     justify-content: space-between;
 }
 
+.detalhes-emoji {
+    display: flex;
+    gap: 5px;
+    align-items: center;
+}
+
+.detalhes-emoji span {
+    font-size: 12px;
+    color: var(--branco-terciario);
+    font-weight: 400;
+}
+
 .detalhes-precos {
     font-weight: 700;
+    display: flex;
+    gap: 5px;
+    align-items: center;
+}
+
+.detalhes-precos h2 {
+    padding: 2px 5px;
+    border-radius: 2px;
 }
 
 .modal__botao {
@@ -245,11 +274,18 @@ body {
     font-size: 14px;
     font-weight: 700;
     border-radius: 2px;
+    margin-bottom: 20px;
 }
 
 .modal-footer {
     color: #E1C111;
     font-size: 14px;
+    max-width: 430px;
+}
+
+.modal-footer p {
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 #closeButton {
@@ -280,4 +316,139 @@ body {
     #boxShadow3 {
         box-shadow: rgba(189, 22, 44, 0.2) 0px 0px 100px 200px;
     }
+}
+
+
+@media (max-width: 768px) {
+
+    .modal {
+        width: 100%;
+        height: 600px;
+        position: fixed;
+        top: 71%;
+    }
+
+    .modal__botao {
+        background-color: var(--vermelho);
+    }
+
+    #selo {
+        display: none;
+    }
+
+    .modal-header {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+
+    .modal-header img {
+        width: 22px;
+        height: 22px;
+    }
+
+    .modal-header h2 {
+        font-size: 22px;
+        font-weight: 700;
+    }
+
+    .modal-body p {
+        font-size: 14px;
+        font-weight: 400;
+        color: var(--branco-terciario);
+    }
+
+    .container__prices-modal {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+    }
+
+    .container__modal-line {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: baseline;
+    }
+
+    .container__modal-line input:checked {
+        background-color: green;
+    }
+
+    .container__modal-line h3 {
+        font-size: 14px;
+        font-weight: 500;
+    }
+
+    .container__modal-line span {
+        font-size: 12px;
+        color: var(--branco-principal);
+        font-weight: 700;
+        background-color: #2E8B5750;
+        border: 1px solid var(--verde);
+        border-radius: 20px;
+        padding: 2px 10px;
+    }
+
+    .container__modal-line h2 {
+        font-size: 12px;
+        font-weight: 800;
+    }
+
+    .modal__container-detalhes {
+        width: 100%;
+        height: 70px;
+        background-color: #444444;
+        border-radius: 4px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        padding: 10px;
+    }
+
+    .modal__container-detalhes h1 {
+        font-weight: 700;
+        font-size: 14px;
+    }
+
+    .modal-detalhes {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .detalhes-emoji {
+        display: flex;
+        gap: 5px;
+        align-items: center;
+    }
+
+    .detalhes-emoji span {
+        font-size: 12px;
+        color: var(--branco-terciario);
+        font-weight: 400;
+    }
+
+    .detalhes-precos {
+        font-weight: 700;
+        display: flex;
+        gap: 5px;
+        align-items: center;
+    }
+
+    .detalhes-precos h2 {
+        padding: 2px 5px;
+        border-radius: 2px;
+    }
+
+    .modal__botao {
+        background-color: var(--verde);
+        color: var(--branco-principal);
+        width: 100%;
+        height: 40px;
+        font-size: 14px;
+        font-weight: 700;
+        border-radius: 2px;
+        margin-bottom: 20px;
+    }
+
 }
