--- a/style.css
+++ b/style.css
@@ -280,6 +280,7 @@ body {
 .modal-footer {
     color: #E1C111;
     font-size: 14px;
+    max-width: 420px;
 }
 
 .modal-footer p {
@@ -324,12 +325,13 @@ body {
         width: 100%;
         height: 600px;
         position: fixed;
-        top: 71%;
+        top: 65%;
+        left: 46.5%;
     }
 
     #modalContent {
         width: 100%;
-        
+        /* margin: 0 25px 0 0; */
     }
 
     .modal__botao {
@@ -346,6 +348,7 @@ body {
         justify-content: center;
         flex-direction: column-reverse;
         background-color: #333;
+        width: 100%;
     }
 
     .selecionado {
@@ -367,6 +370,12 @@ body {
 
     .modal-footer p {
         font-size: 12px;
+        max-width: 100%;
+        margin: 15px 12px;
+    }
+
+    #selo {
+        display: none;
     }
 
 }
