--- a/style.css
+++ b/style.css
@@ -112,6 +112,14 @@ body {
     border-radius: 2px;
 }
 
+#linkObtenha {
+    display: block;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 @media (min-width: 760px) {
     #policy {
         flex-direction: row-reverse;
@@ -326,7 +334,7 @@ body {
         height: 600px;
         position: fixed;
         top: 65%;
-        left: 46.5%;
+        left: 49%;
     }
 
     #modalContent {
